added add_church form

--- a/pullpayproject/churches/templates/index.html
+++ b/pullpayproject/churches/templates/index.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html>
+<title>Where you can input churches!</title>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Five Churches</title>
 </head>
 
 <body>
-    <h1>Top Five Churches by Size</h1>
-    <ul>
-        {% for church in top_five_churches %}
-        <li>{{ church.church_name_text }} - Size: {{ church.size_int }}</li>
-        {% empty %}
-        <li>No churches found.</li>
-        {% endfor %}
-    </ul>
-</body>
+    <h1>Where you can input churches!</h1>
 
 </html>
