--- a/pullpayproject/churches/templates/index.html
+++ b/pullpayproject/churches/templates/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html>
 <title>Where you can input churches!</title>
+
 <head>
 </head>
 
 <body>
-    <h1>Where you can input churches!</h1>
+    <h1>Welcome home</h1>
+    <ul>
+    <li><button class="Add_Church_Button"><a href="add_church">Church</a> </button></li>
+    <li><button class="Add_Church_Button">View Church</button></li>
+    <li><button class="Add_Church_Button">Delete Church</button></li>
+    </ul>
+</body>
 
 </html>
