--- a/pullpayproject/churches/templates/index.html
+++ b/pullpayproject/churches/templates/index.html
@@ -6,11 +6,10 @@
 </head>
 
 <body>
-    <h1>Welcome home</h1>
+    <h1>Edit Churches Data</h1>
     <ul>
-    <li><button class="Add_Church_Button"><a href="add_church">Church</a> </button></li>
-    <li><button class="Add_Church_Button">View Church</button></li>
-    <li><button class="Add_Church_Button">Delete Church</button></li>
+        <li><button class="Add_Church_Button"><a href="add_church">Add Church</a> </button></li>
+        <li><button class="View_Churches_Button"><a href="view_churches">View/Delete/Update churches</a></button></li>
     </ul>
 </body>
 
