Created Users Model

--- a/pullpayproject/churches/templates/index.html
+++ b/pullpayproject/churches/templates/index.html
@@ -10,6 +10,8 @@
     <ul>
         <li><button class="Add_Church_Button"><a href="add_church">Add Church</a> </button></li>
         <li><button class="View_Churches_Button"><a href="view_churches">View/Delete/Update churches</a></button></li>
+        <li><button class="Add_User_Button"><a href="create_user">Create User</a></button></li>
+
     </ul>
 </body>
 
