added login page/logout feature

--- a/pullpayproject/churches/templates/index.html
+++ b/pullpayproject/churches/templates/index.html
@@ -11,7 +11,12 @@
         <li><button class="Add_Church_Button"><a href="add_church">Add Church</a> </button></li>
         <li><button class="View_Churches_Button"><a href="view_churches">View/Delete/Update churches</a></button></li>
         <li><button class="Add_User_Button"><a href="create_user">Create User</a></button></li>
-
+        {% if user.is_authenticated %}
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Logout</button>
+        </form>
+        {% endif %}
     </ul>
 </body>
 
