--- a/pullpayproject/churches/templates/Users/user_list.html
+++ b/pullpayproject/churches/templates/Users/user_list.html
@@ -1,3 +1,4 @@
+<html>
 <h1>User List</h1>
 
 <ul>
@@ -5,3 +6,5 @@
     <li>{{ user.user_first_name }} {{ user.user_last_name }} - {{ user.email }}</li>
     {% endfor %}
 </ul>
+
+</html>
